<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <data>
        <variable
            name="viewModel"
            type="com.example.appcomparador.view.CompareViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:background="#CADC1A"
    android:backgroundTint="?android:attr/detailsElementBackground">



        <EditText
            android:id="@+id/editText1"
            android:layout_width="259dp"
            android:layout_height="74dp"
            android:hint="Texto 1"
            android:text="@{viewModel.text1}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.301" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="253dp"
            android:layout_height="70dp"
            android:hint="Texto 2"
            android:text="@{viewModel.text2}"
            app:layout_constraintBottom_toTopOf="@+id/compareButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <Button
        android:id="@+id/compareButton"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="@{() -> viewModel.compareTexts(editText1.text.toString(), editText2.text.toString())}"
        android:shadowColor="#00BCD4"
        android:text="Comparar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"/>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="146dp"
        android:text="@{viewModel.result}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compareButton"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:background="@android:drawable/alert_light_frame"
            android:backgroundTint="?android:attr/windowBackgroundFallback"
            android:fontFamily="sans-serif-black"
            android:hyphenationFrequency="none"
            android:shadowColor="@color/purple_500"
            android:singleLine="false"
            android:soundEffectsEnabled="false"
            android:text="Ingrese los textos a comparar"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/design_default_color_background"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.073" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

